[SW-1242] extraTestJVMArgs in gradle.properties