@@ -19,8 +19,9 @@ test {
     // Increase heap size
     maxHeapSize = "4g"
 
-    // Increase PermGen
-    jvmArgs '-XX:MaxPermSize=384m'
+    if(!extraTestJVMArgs.isEmpty()) {
+        jvmArgs extraTestJVMArgs
+    }
 
     // Working dir will be root project
     workingDir = rootDir
